Tests/a1/reject/06.ul
int main () {
	print return x;
}